logs/turtlesim/build.make.150.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:234:3: error: expected unqualified-id before ‘return’
   return modified;
   ^~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:237:6: error: ‘Turtle’ has not been declared
 void Turtle::paint(QPainter& painter)
      ^~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In function ‘void paint(QPainter&)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:240:15: error: ‘pos_’ was not declared in this scope
   QPointF p = pos_;
               ^~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:240:15: note: suggested alternative: ‘powq’
   QPointF p = pos_;
               ^~~~
               powq
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:243:13: error: ‘a’ was not declared in this scope
   p.rx() -= a;
             ^
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:244:13: error: ‘b’ was not declared in this scope
   p.ry() -= b;
             ^
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:245:24: error: ‘turtle_rotated_image_’ was not declared in this scope
   painter.drawImage(p, turtle_rotated_image_);
                        ^~~~~~~~~~~~~~~~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:246:27: error: ‘wayx’ was not declared in this scope
   painter.drawEllipse(int(wayx),int(wayy), 100, 100);
                           ^~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:246:37: error: ‘wayy’ was not declared in this scope
   painter.drawEllipse(int(wayx),int(wayy), 100, 100);
                                     ^~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: At global scope:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:268:1: error: expected declaration before ‘}’ token
 }
 ^
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
